--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,12 +4,10 @@ on:
   pull_request:
     types: [ opened, synchronize ]
     paths:
-      - 'lib/**'
-      - 'app/**' # if we don't run the lib tests when the app tests run we'll end up with missing test coverage
-      - '.github/workflows/test-lib.yml'
-      - 'testservers/src/main/**'
-      - 'testservers/build.gradle.kts'
+      - 'knet/**'
+      - '.github/workflows/test.yml'
       - 'build.gradle.kts'
+      - 'settings.gradle.kts'
       - 'gradle/libs.versions.toml'
 
 concurrency:
