--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,8 +10,10 @@ slf4j = "2.0.16"
 
 [libraries]
 icmp_common = { module = "com.jasonernst.icmp:icmp_common", version.ref = "icmp" }
-junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "jupiter" }
-junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "jupiter" }
+junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api" }
+junit-bom = { module = "org.junit:junit-bom", version="5.12.0" }
+junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine" }
+junit-jupiter-platform-launcher = { module = "org.junit.platform:junit-platform-launcher" }
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback-classic" }
 packetdumper = { module = "com.jasonernst.packetdumper:packetdumper", version.ref = "packetdumper" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
@@ -19,6 +21,7 @@ slf4j-api = { module = "org.slf4j:slf4j-api", version.ref = "slf4j" }
 
 [bundles]
 test = ["junit-jupiter-api", "mockk"]
+test-runtime = ["junit-jupiter-engine", "junit-jupiter-platform-launcher"]
 
 [plugins]
 git-version = { id = "me.qoomon.git-versioning", version = "6.4.4" }
